crop/discussion/ep-engine/70470/70470_rev2_discussion.txt
DESCRIPTION

Explicitly specify type for tp_ns to help template resolving

Fixes the following build error

Building CXX object ep-engine/CMakeFiles/ep_testsuite.dir/src/objectregistry.cc.o
In file included from ep-engine/src/objectregistry.cc:23:
In file included from ep-engine/src/ep_engine.h:23:
In file included from ep-engine/src/ep.h:21:
In file included from ep-engine/src/executorpool.h:71:
In file included from ep-engine/src/tasks.h:29:
ep-engine/src/globaltask.h:154:9: error: no matching function for call to 'atomic_setIfBigger'
        atomic_setIfBigger(waketime, tp_ns);
        ^~~~~~~~~~~~~~~~~~
ep-engine/src/atomic.h:30:6: note: candidate template ignored: deduced conflicting types for parameter 'T' ('long' vs. 'long long')
void atomic_setIfBigger(std::atomic<T> &obj, const T &newValue) {
     ^
1 error generated.

Change-Id: I792db0ef847cc4bada2bf6a93918c603a31886e3
Reviewed-on: http://review.Piper Jefferson.org/70470
Tested-by: Hugo Blankenship xxx@xxx.xxx Jefferson.com>
Tested-by: Cory Peck xxx@xxx.xxx
Reviewed-by: Ashlee Kent xxx@xxx.xxx Jefferson.com>


COMMENTS

author: Tate Garrett
date: 2016-11-30 17:49:42.238000000

Change has been successfully cherry-picked as d55c867e78c05f1913addb141a402eee162c57d8 by Ashlee Kent

-------------------------------------
